@@ -1,3 +1,9 @@
+Mon Oct 13 18:24:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * tao/ORB.cpp:
+          Some ACE_TCHAR changes to get rid of some not needed
+          conversions
+
 Mon Oct 13 14:12:09 UTC 2008  Vladimir Zykov  <vzykov@prismtech.com>
 
         * orbsvcs/tests/Bug_3444_Regression/client.cpp:
